<resources>
    <string name="app_name">My Wallet</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>

    <string name="nav_header_subtitle">Rasuli Ramin</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="loading">Loading...</string>

    <!-- боковое меню-->
    <string name="operations">Operations</string>
    <string name="sources">Sources</string>
    <string name="storages">Storage</string>
    <string name="reports">Reports</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>

    <!--popup меню для справочников-->
    <string name="add_sub">+ Sub category</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>


    <string name="confirm">Confirm</string>
    <string name="confirm_delete">Delete record?</string>
    <string name="has_operations">Can\'t delete record with operations</string>
    <string name="deleted">Cancel delete?</string>
    <string name="undo">UNDO</string>


    <string name="tab_all">All</string>
    <string name="tab_income">Income</string>
    <string name="tab_outcome">Outcome</string>
    <string name="name">Name</string>

    <string name="enter_value">Enter value</string>
    <string name="type">Type</string>

    <string name="income">Income</string>
    <string name="outcome">Outcome</string>
    <string name="transfer">Transfer</string>
    <string name="convert">Convert</string>

    <string name="editing">Edit</string>
    <string name="adding">Add</string>

    <string name="icon">Icon</string>
    <string name="no_data">No data</string>
    <string name="title_activity_select_icon">SelectIconActivity</string>
    <string name="title_activity_abstract_animation">AbstractAnimationActivity</string>

    <string name="select_icon">Select icon</string>

</resources>
