<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_operations"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/operations" />
        <item
            android:id="@+id/nav_sources"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/sources" />
        <item
            android:id="@+id/nav_storages"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/storages" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_rate_us"
                android:icon="@drawable/heart_outline"
                android:tint="@color/colorAccent"
                android:title="@string/rate_us" />
            <item
                android:id="@+id/nav_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/help" />
            <item
                android:id="@+id/nav_reports"
                android:icon="@android:drawable/ic_menu_send"
                android:title="@string/reports" />
        </menu>
    </item>

</menu>
