<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditSourceActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_edit_source"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_node_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_close"
                    android:tint="@color/colorPrimaryText"

                    />

                <TextView
                    android:id="@+id/tv_node_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center"
                    android:text="@string/editing"
                    android:textAppearance="@android:style/TextAppearance.Material.Title" />

                <ImageView
                    android:id="@+id/img_node_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:src="@drawable/ic_done"
                    android:tint="@color/colorPrimaryText" />

            </RelativeLayout>


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/lbl_source_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/name"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />


        <TextView
            android:id="@+id/tv_source_icon_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/lbl_source_name"
            android:layout_below="@id/lbl_source_name"
            android:layout_marginTop="40dp"
            android:text="@string/icon"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />


        <TextView
            android:id="@+id/lbl_source_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/tv_source_icon_label"
            android:layout_marginTop="40dp"
            android:text="@string/type"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />


        <EditText
            android:id="@+id/et_source_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignBaseline="@id/lbl_source_name"
            android:layout_alignParentRight="true"

            android:maxEms="20"
            android:text="value"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />


        <ImageView
            android:id="@+id/img_source_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignBottom="@id/tv_source_icon_label"
            android:layout_alignParentRight="true"


            android:src="@drawable/ic_empty"
            android:tint="@color/colorSecondaryText" />


        <Spinner
            android:id="@+id/sp_source_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"


            android:layout_alignTop="@id/lbl_source_type"
            android:layout_below="@id/img_source_icon"

            android:text="value"
            android:textAppearance="@android:style/Widget.Material.Light.Spinner" />


    </RelativeLayout>


</RelativeLayout>